--- a/index.html
+++ b/index.html
@@ -34,6 +34,48 @@
 
             <div class="menu-icon"><i class="fa-solid fa-bars fa-2x"></i></div>
         </header>
+
+        <div class="landing">
+            <div class="bar">
+                <span></span>
+            </div>
+
+            <div class="text">
+                <h1>Solar Panel Installers In Plymouth</h1>
+                <p>Fueled is an award-winning technology consultancy that transforms businesses by generating ideas,
+                    building products, and
+                    accelerating growth.</p>
+
+                <div class="btn-box">
+                    <button>Call Us Today</button>
+                    <button>Requst a call back</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="trade">
+        <article>
+            <h2>The Friendliest Installers in the South-West</h2>
+            <p>At Solidarity Solar our aims are to help our customers towards a sustainable future and genuinely care
+                about the quality
+                of products we use for our installs. We never sell you equipment you don't need and will always advise
+                to the best of
+                our ability, No hard sell or pushy sales tactics ever. We take pride in our work and do our best to make
+                sure that we
+                meet, or exceed, our customers' expectations.</p>
+
+                <ul>
+                    <li><span>01/</span>Collaborate with 100+ leading</li>
+                    <li><span>02/</span>100+ leading universities and companies</li>
+                    <li><span>03/</span>leading universities and companies</li>
+                    <li><span>04/</span>universities and companies</li>
+                </ul>
+        </article>
+        <div class="images-box">
+            <img src="./images/Group 3.png" alt="solor-panel-pic">
+        </div>
     </section>
     <script src="master.js"></script>
 </body>
