Added The Call Us Section

--- a/index.html
+++ b/index.html
@@ -66,15 +66,26 @@
                 sure that we
                 meet, or exceed, our customers' expectations.</p>
 
-                <ul>
-                    <li><span>01/</span>Collaborate with 100+ leading</li>
-                    <li><span>02/</span>100+ leading universities and companies</li>
-                    <li><span>03/</span>leading universities and companies</li>
-                    <li><span>04/</span>universities and companies</li>
-                </ul>
+            <ul>
+                <li><span>01/</span>Collaborate with 100+ leading</li>
+                <li><span>02/</span>100+ leading universities and companies</li>
+                <li><span>03/</span>leading universities and companies</li>
+                <li><span>04/</span>universities and companies</li>
+            </ul>
         </article>
         <div class="images-box">
             <img src="./images/Group 3.png" alt="solor-panel-pic">
+        </div>
+    </section>
+
+    <section id="call-us">
+        <div class="img-box">
+            <img src="./images/8116 1.png" alt="">
+        </div>
+        <div class="info">
+            <h2>Power that Doesn't Cost the Earth</h2>
+            <p>If you need advice then give us a call on 07745593882 or hit the button below to request a call back!</p>
+            <button>Call Us Today</button>
         </div>
     </section>
     <script src="master.js"></script>
