--- a/index.html
+++ b/index.html
@@ -88,6 +88,27 @@
             <button>Call Us Today</button>
         </div>
     </section>
+
+
+    <section class="replacement">
+        <div class="replacement-bg">
+            <img src="./images/8116 1 (1).png" alt="pic">
+        </div>
+
+        <div class="text">
+            <h2>Repairs Over Replacement</h2>
+            <p>We approach every aspect of our business with sustainability in mind. That's why we believe it's always
+                worth
+                trying to
+                fix a system before outright replacing it, wherever possible – it requires fewer materials and is easier
+                on
+                the planet,
+                as well as your wallet! If another company tells you that your system needs to be replaced, just give us
+                a
+                call and
+                we'll see if we can repair it first.</p>
+        </div>
+    </section>
     <script src="master.js"></script>
 </body>
 
