Added The Solar Kits Section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,44 @@
         </div>
     </section>
 
+    <section class="solar-kits">
+        <h2>Solar Kits</h2>
+        <p class="p-1">Complete solar system kits, ready for installation. They can be used to supplement on-grid housing, a
+            complete
+            self-sustaining home or some combination of the two.</p>
+
+        <div class="solar-kits-examples">
+            <div class="box">
+                <img src="./images/solar-panels-2.png" alt="solar-panels-pic">
+                <h3>Off Grid</h3>
+                <p>WOC has contributed to students so that they can work in their dream company, we will continue to
+                    stick to our
+                    commitment to create an advanced generation,</p>
+
+                    <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+
+            <div class="box">
+                <img src="./images/solar-panels-3.png" alt="solar-panels-pic">
+                <h3>On Grid</h3>
+                <p>WOC has contributed to students so that they can work in their dream company, we will continue to
+                    stick to our
+                    commitment to create an advanced generation,</p>
+
+                    <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+
+            <div class="box">
+                <img src="./images/solar-panels-4.png" alt="solar-panels-pic">
+                <h3>Hybrid</h3>
+                <p>WOC has contributed to students so that they can work in their dream company, we will continue to
+                    stick to our
+                    commitment to create an advanced generation,</p>
+
+                    <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+        </div>
+    </section>
 
     <section class="replacement">
         <div class="replacement-bg">
