Finished The Site Except The Energy Section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Panel</title>
+
+    <meta name="description" content="Task For Web Masters - Week One">
+    <meta name="Author" content="Ahmed Adel">
+    <meta name="keywords" content="Task , Week One , Landing Page">
+    <meta name="robots" content="index , follow">
+
+
+    <!-- Main Style Sheet  -->
     <link rel="stylesheet" href="css/master.css">
     <!--Font Awesome Libarary-->
     <link rel="stylesheet" href="css/all.min.css">
+
 </head>
 
 <body>
 
+    <!-- Start Of Home Page Section -->
     <section id="home">
         <header>
             <div class="logo">
@@ -54,7 +64,9 @@
         </div>
 
     </section>
+    <!-- End Of Home Page Section -->
 
+    <!-- Start Of Trade Section -->
     <section id="trade">
         <article>
             <h2>The Friendliest Installers in the South-West</h2>
@@ -77,7 +89,9 @@
             <img src="./images/Group 3.png" alt="solor-panel-pic">
         </div>
     </section>
+    <!-- End Of Trade Section -->
 
+    <!-- Start Of Call Us Section  -->
     <section id="call-us">
         <div class="img-box">
             <img src="./images/8116 1.png" alt="">
@@ -88,46 +102,51 @@
             <button>Call Us Today</button>
         </div>
     </section>
+    <!-- End Of Call Us Section  -->
 
+    <!-- Start Of Solar Kits Section -->
     <section class="solar-kits">
         <h2>Solar Kits</h2>
-        <p class="p-1">Complete solar system kits, ready for installation. They can be used to supplement on-grid housing, a
+        <p class="p-1">Complete solar system kits, ready for installation. They can be used to supplement on-grid
+            housing, a
             complete
             self-sustaining home or some combination of the two.</p>
 
         <div class="solar-kits-examples">
+            <!-- Box One  -->
             <div class="box">
                 <img src="./images/solar-panels-2.png" alt="solar-panels-pic">
                 <h3>Off Grid</h3>
                 <p>WOC has contributed to students so that they can work in their dream company, we will continue to
                     stick to our
                     commitment to create an advanced generation,</p>
-
-                    <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
+                <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
             </div>
 
+            <!-- Box Two -->
             <div class="box">
                 <img src="./images/solar-panels-3.png" alt="solar-panels-pic">
                 <h3>On Grid</h3>
                 <p>WOC has contributed to students so that they can work in their dream company, we will continue to
                     stick to our
                     commitment to create an advanced generation,</p>
-
-                    <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
+                <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
             </div>
 
+            <!-- Box Three -->
             <div class="box">
                 <img src="./images/solar-panels-4.png" alt="solar-panels-pic">
                 <h3>Hybrid</h3>
                 <p>WOC has contributed to students so that they can work in their dream company, we will continue to
                     stick to our
                     commitment to create an advanced generation,</p>
-
-                    <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
+                <span>View Products <i class="fa-solid fa-arrow-right"></i></span>
             </div>
         </div>
     </section>
+    <!-- End Of Solar Kits Section -->
 
+    <!-- Start Of Replacement Section -->
     <section class="replacement">
         <div class="replacement-bg">
             <img src="./images/8116 1 (1).png" alt="pic">
@@ -147,6 +166,134 @@
                 we'll see if we can repair it first.</p>
         </div>
     </section>
+    <!-- End Of Replacement Section -->
+
+    <!-- Start Of Values Section -->
+    <section class="our-values">
+        <h2>Our Values</h2>
+        <p class="p-1">More than 3000 users have been helped by World Online Course.</p>
+
+        <div class="our-values-examples">
+            <!-- Box One  -->
+            <div class="box">
+                <img src="./images/Vector1.png" alt="our-values-pic">
+                <h3>Customer Care</h3>
+                <p>We're here to help you with solar panel installation in Devon and Cornwall. If we were to sum
+                    ourselves up in a few
+                    words, those would be "reliable, honest and friendly." We find our customers agree! We're with you
+                    from the start of the
+                    project to the finish.</p>
+            </div>
+
+            <!-- Box Two -->
+            <div class="box">
+                <img src="./images/Vector2.png" alt="our-values-pic">
+                <h3>Price</h3>
+                <p>As I'm sure you'll have seen, solar systems don't tend to come cheap. Our aim is to make solar power
+                    accessible to
+                    everyone, so we price ourselves in a way that makes solar energy more affordable. We're focused on
+                    helping you and on
+                    helping the environment, rather than on turning a profit.</p>
+            </div>
+
+            <!-- Box Three -->
+            <div class="box">
+                <img src="./images/Vector3.png" alt="our-values-pic">
+                <h3>Sustainability</h3>
+                <p>As we've said, we do this because we truly care about the planet and about seeing people embrace a
+                    greener, more
+                    eco-friendly approach to power. The world of green energy can be jargon-filled and opaque, so we
+                    want to help educate
+                    people on the big and little things they can do to protect our planet!</p>
+            </div>
+        </div>
+    </section>
+    <!-- End Of Values Section -->
+
+    <!-- Start Of What They Say Section -->
+    <section class="what-they-say">
+
+        <aside class="text">
+            <div>
+                <img src="./images/qoute.png" alt="qoute-pic">
+            </div>
+            <h3>what they say about WOC</h3>
+            <p>More than 3000 users have been helped by World Online Course.</p>
+        </aside>
+
+        <aside class="card">
+            <div class="container-1">
+                <p>What they say</p>
+                <div class="dots">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+
+            <p><q>Studying at WOC is fun, the curriculum is complete, the instructors are competent, and the assignments
+                    given are also
+                    relevant to the current scope of work.</q></p>
+
+            <div class="container-2">
+                <div class="user-info">
+                    <img src="./images/EDITED-27.png" alt="user-pic">
+                    <div>
+                        <h4>Resky Fernanda</h4>
+                        <span>Product Designer at Tokopedia</span>
+                    </div>
+                </div>
+
+                <div class="arrows">
+                    <span><i class="fa-solid fa-chevron-left"></i></span>
+                    <span><i class="fa-solid fa-chevron-right"></i></span>
+                </div>
+            </div>
+        </aside>
+
+    </section>
+    <!-- End Of What They Say Section -->
+
+    <!-- Start Of Footer Section -->
+    <footer>
+        <div class="up">
+            <div class="box">
+                <img src="./images/image 8.png" alt="user-pic">
+                <div class="links">
+                    <a>About</a>
+                    <a>Careers</a>
+                    <a>Press</a>
+                    <a>Customer Care</a>
+                    <a>Services</a>
+                </div>
+            </div>
+
+            <div class="subscibe">
+                <span>Get the freshest news from us</span>
+                <form>
+                    <input type="email" placeholder="Your email address..." minlength="10">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <hr>
+        <div class="down">
+            <div class="terms">
+                <span>Terms & Conditions</span>
+                <span>|</span>
+                <span>Privacy Policy</span>
+                <span>|</span>
+                <span>Accessibility</span>
+                <span>|</span>
+                <span>Legal</span>
+            </div>
+            <span>Copyright 2023 - Solidarity Solar Ltd</span>
+        </div>
+    </footer>
+    <!-- End Of Footer Section -->
+
     <script src="master.js"></script>
 </body>
 
