Added Hover Effect On Links

--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
         <hr>
         <div class="down">
             <div class="terms">
-                <span>Terms & Conditions</span>
-                <span>|</span>
-                <span>Privacy Policy</span>
-                <span>|</span>
-                <span>Accessibility</span>
-                <span>|</span>
-                <span>Legal</span>
+                <span><a href="#">Terms & Conditions</a><span>
+                    <span>|</span>
+                    <span><a href="#">Privacy Policy</a></span>
+                    <span>|</span>
+                    <span><a href="#">Accessibility</a></span>
+                    <span>|</span>
+                    <span><a href="#">Legal</a></span>
             </div>
             <span>Copyright 2023 - Solidarity Solar Ltd</span>
         </div>
