--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="images/image 8.png" alt="logo-pic">
             </div>
 
-            <nav>
+            <nav class="big-screens">
                 <ul>
                     <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#trade">Trade</a></li>
@@ -43,6 +43,18 @@
             </div>
 
             <div class="menu-icon"><i class="fa-solid fa-bars fa-2x"></i></div>
+
+            <div class="nav-links-small-screens">
+                <nav>
+                    <ul>
+                        <li><a href="#home" class="active">Home</a></li>
+                        <li><a href="#trade">Trade</a></li>
+                        <li><a href="#shop">Shop</a></li>
+                        <li><a href="#contact-us">Contact Us</a></li>
+                        <li><a href="#call-us">Call Us : +1 2345 3456 45</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
         <div class="landing">
@@ -105,7 +117,7 @@
     <!-- End Of Call Us Section  -->
 
     <!-- Start Of Solar Kits Section -->
-    <section class="solar-kits">
+    <section class="solar-kits" id="shop">
         <h2>Solar Kits</h2>
         <p class="p-1">Complete solar system kits, ready for installation. They can be used to supplement on-grid
             housing, a
@@ -167,6 +179,60 @@
         </div>
     </section>
     <!-- End Of Replacement Section -->
+
+    <!-- Start Of Energy Section -->
+    <section class="energy">
+        <div class="left-side">
+            <img src="./images/Featured icon.png" alt="icon-pic">
+            <h2>Energy Innovators - the products we love</h2>
+            <p>Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse tempor et ipsum sit egestas nunc. Diam in
+                cum
+                a in.</p>
+        </div>
+
+        <div class="right-side">
+            <!-- Box One -->
+            <div class="box">
+                <img src="./images/Frame 89.png" alt="pic">
+                <h3>SoliTek - The European Manufacturer of Solar Panels</h3>
+                <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels
+                    and are constantly
+                    coming up with new ideas - including their <u>solar greenhouse</u>.</p>
+                <span>View integration <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+
+            <!-- Box Two -->
+            <div class="box">
+                <img src="./images/Frame 89.png" alt="pic">
+                <h3>Sunsynk - No Power No Problem</h3>
+                <p>Sunsynk build the most versatile hybrid inverter on the market, designed to take up to 7kW of solar
+                    on a standard
+                    domestic supply - for simultaneous battery charging and household usage.</p>
+                <span>View integration <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+
+            <!-- Box Three -->
+            <div class="box">
+                <img src="./images/Frame 89.png" alt="pic">
+                <h3>BYD - Electrifying Transport</h3>
+                <p>We use battery cells made by BYD, a market leader in lithium batteries. BYD batteries are in cars,
+                    trucks, and buses -
+                    they build robust batteries.</p>
+                <span>View integration <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+
+            <!-- Box Four -->
+            <div class="box">
+                <img src="./images/Frame 89.png" alt="pic">
+                <h3>REC - Solar's Most Trusted</h3>
+                <p>REC - Renewable Energy Corporation, are one of the longest trading names in solar. They know how to
+                    be truly sustainable
+                    in this industry - their panels are 100% lead free and have the most trusted warranty in solar.</p>
+                <span>View integration <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+        </div>
+    </section>
+    <!-- End Of Energy Section -->
 
     <!-- Start Of Values Section -->
     <section class="our-values">
@@ -257,7 +323,7 @@
     <!-- End Of What They Say Section -->
 
     <!-- Start Of Footer Section -->
-    <footer>
+    <footer id="contact-us">
         <div class="up">
             <div class="box">
                 <img src="./images/image 8.png" alt="user-pic">
@@ -271,7 +337,7 @@
             </div>
 
             <div class="subscibe">
-                <span>Get the freshest news from us</span>
+                <span class="label">Get the freshest news from us</span>
                 <form>
                     <input type="email" placeholder="Your email address..." minlength="10">
                     <button type="submit">Subscribe</button>
@@ -282,19 +348,18 @@
         <div class="down">
             <div class="terms">
                 <span><a href="#">Terms & Conditions</a><span>
-                    <span>|</span>
-                    <span><a href="#">Privacy Policy</a></span>
-                    <span>|</span>
-                    <span><a href="#">Accessibility</a></span>
-                    <span>|</span>
-                    <span><a href="#">Legal</a></span>
+                        <span>|</span>
+                        <span><a href="#">Privacy Policy</a></span>
+                        <span>|</span>
+                        <span><a href="#">Accessibility</a></span>
+                        <span>|</span>
+                        <span><a href="#">Legal</a></span>
             </div>
             <span>Copyright 2023 - Solidarity Solar Ltd</span>
         </div>
     </footer>
     <!-- End Of Footer Section -->
 
-    <script src="master.js"></script>
 </body>
 
 </html>
