Fixed The Indentaion In The Code

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
         <aside class="card">
             <div class="container-1">
                 <p>What they say</p>
+                <!-- The Dots Shape For Navegation -->
                 <div class="dots">
                     <span></span>
                     <span></span>
